--- a/pollex-angular/src/app/logged/home/home.component.html
+++ b/pollex-angular/src/app/logged/home/home.component.html
@@ -24,14 +24,15 @@
     </div>
   </div>
   <div class="mt-16">
-    <div class="row mt-2 shadow-sm py-2  w-75 bg-primary mx-auto text-center">
+    <!--Header-->
+    <div class="row mt-2 shadow-sm py-2 mb-3 w-75 bg-primary mx-auto text-center">
       <div class="col-1">
         <span class="text-white">Tipo</span>
       </div>
       <div class="col-4">
         <span class="text-white">Nome da Poll</span>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <span class="text-white">Nome do Criador</span>
       </div>
       <div class="col-2">
@@ -40,15 +41,20 @@
       <div class="col-2">
         <span class="text-white">Data de Criação</span>
       </div>
+      <div class="col-1">
+        <span class="text-white">Opções</span>
+      </div>
     </div>
-    <div class="row mt-3 py-2  w-75 border-bottom mx-auto text-center">
+    <!---------->
+    <!--Content-->
+    <div class="row py-2 w-75 border-bottom mx-auto text-center">
       <div class="col-1">
         <i class="fas fa-square text-danger"  ></i>
       </div>
       <div class="col-4">
-        <span>Nome da Pool</span>
+        <span [routerLink]="['poll/1']" class="hover-underline hover-bold">Nome da Pool</span>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <span>Nome do Criador</span>
       </div>
       <div class="col-2">
@@ -57,23 +63,10 @@
       <div class="col-2">
         <span>Data de Criação</span>
       </div>
-    </div>
-    <div class="row  py-2  w-75  border-bottom  mx-auto text-center">
       <div class="col-1">
-        <i class="fas fa-square text-success"  ></i>
-      </div>
-      <div class="col-4">
-        <span>Nome da Pool</span>
-      </div>
-      <div class="col-3">
-        <span>Nome do Criador</span>
-      </div>
-      <div class="col-2">
-        <span>N votos/N votantes</span>
-      </div>
-      <div class="col-2">
-        <span>Data de Criação</span>
+        <span [routerLink]="['poll/1/edit']"><i class="fas fa-edit"></i></span>
       </div>
     </div>
+    <!----------->
   </div>
 </div>
