--- a/pollex-angular/src/app/logged/logged.component.html
+++ b/pollex-angular/src/app/logged/logged.component.html
@@ -1,6 +1,6 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3 sticky">
-  <a class="navbar-brand ml-2" href="#">pollex</a>
+  <a class="navbar-brand ml-2" [routerLink]="['/logged']">pollex</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
